fix: prevent wrapping issue when print

--- a/src/components/ContactItem.css
+++ b/src/components/ContactItem.css
@@ -5,6 +5,7 @@
 	margin-top: 0.75rem;
 	margin-right: 1.5rem;
 	break-inside: avoid;
+	white-space: nowrap;
 
 	.icon {
 		display: inline-flex;
