--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 @page {
 	size: A4;
-	margin: 1rem;
+	margin: 0;
 }
 
 :root {
